# maya-usd

./: Jenkinsbuild.json  Jenkinsfile  README.md
AL_USDMaya/: CHANGELOG.md  CMakeLists.txt  package.py
AL_USDMaya/cmake/: AL_USDMaya.cmake
AL_USDMaya/mel/2020/: al_usdmaya_autoload.mel
AL_USDTransaction/: CHANGELOG.md  CMakeLists.txt  package.py
AL_USDUtils/: CHANGELOG.md  CMakeLists.txt  package.py
PXR_USDMaya/: .CMakeLists.txt.swp  CMakeLists.txt  package.py
PXR_USDMaya/tests/: run_tests.sh
automatedTesting/: JenkinsFIle  build_usdmaya_AL.sh
cmake/: FindBoost.cmake  compiler_config.cmake  googletest.cmake  maya-usd-subproject.cmake  test.cmake
lib/: CMakeLists.txt
lib/base/: debugCodes.cpp
lib/fileio/translators/: translatorMayaReference.cpp
lib/mayaUsd/: CMakeLists.txt
lib/mayaUsd/base/: debugCodes.cpp  debugCodes.h
lib/mayaUsd/commands/: CMakeLists.txt  trsOptions.cpp
lib/mayaUsd/fileio/translators/: translatorMayaReference.cpp
lib/mayaUsd/nodes/: proxyShapeBase.cpp  proxyShapeBase.h
lib/mayaUsd/render/pxrUsdMayaGL/: batchRenderer.cpp  instancerImager.cpp  instancerShapeAdapter.cpp  proxyDrawOverride.cpp  proxyShapeUI.cpp  usdProxyShapeAdapter.cpp
lib/mayaUsd/render/vp2RenderDelegate/: proxyRenderDelegate.cpp  proxyRenderDelegate.h
lib/mayaUsd/ufe/: CMakeLists.txt  Global.cpp  Global.h  StagesSubject.cpp  UsdRotatePivotTranslateUndoableCommand.cpp  UsdRotateUndoableCommand.cpp  UsdRotateUndoableCommand.h  UsdScalePivotTranslateUndoableCommand.cpp  UsdScalePivotTranslateUndoableCommand.h  UsdScaleUndoableCommand.cpp  UsdScaleUndoableCommand.h  UsdStageMap.cpp  UsdStageMap.h  UsdTRSUndoableCommandBase.cpp  UsdTRSUndoableCommandBase.h  UsdTransform3d.cpp  UsdTransform3d.h  UsdTranslateUndoableCommand.cpp  UsdTranslateUndoableCommand.h  Utils.cpp  Utils.h  wrapUtils.cpp
lib/mayaUsd/ufe/private/: Utils.cpp  Utils.h
lib/nodes/: proxyShapeBase.h
lib/render/vp2RenderDelegate/: proxyRenderDelegate.cpp  proxyRenderDelegate.h
lib/ufe/: CMakeLists.txt  Global.cpp  Global.h  UsdHierarchyHandler.cpp  UsdRotatePivotTranslateUndoableCommand.cpp  UsdRotatePivotTranslateUndoableCommand.h  UsdRotateUndoableCommand.cpp  UsdStageMap.cpp  UsdTransform3d.cpp  UsdTranslateUndoableCommand.cpp  Utils.cpp  wrapUtils.cpp
lib/usd/utils/: CMakeLists.txt  DiffCore.cpp  MayaTransformAPI.cpp  SIMD.h  TransformCache.cpp  TransformCache.h  TransformEvaluator.cpp  TransformEvaluator.h  TransformManipulator.cpp  TransformManipulator.h  TransformManipulatorEx.cpp  TransformManipulatorEx.h  TransformMaths.h  TransformOpInserter.cpp  TransformOpInserter.h  TransformOpTools.cpp  TransformOpTools.h  module.cpp  wrapMayaTransformAPI.cpp  wrapTransformCache.cpp  wrapTransformEvaluator.cpp  wrapTransformManipulator.cpp  wrapTransformOpInserter.cpp
lib/usd/utils/tests/: CMakeLists.txt  test_MayaTransformAPI.py
plugin/al/lib/AL_USDMaya/: CMakeLists.txt
plugin/al/lib/AL_USDMaya/AL/usdmaya/: CodeTimings.cpp  CodeTimings.h  Global.cpp  PluginRegister.h  SelectabilityDB.cpp  StageCache.cpp  Version.h
plugin/al/lib/AL_USDMaya/AL/usdmaya/cmds/: ProxyShapeCommands.cpp  ProxyShapeCommands.h  ProxyShapePostLoadProcess.cpp  ProxyShapePostLoadProcess.h
plugin/al/lib/AL_USDMaya/AL/usdmaya/fileio/: Export.cpp  Import.cpp
plugin/al/lib/AL_USDMaya/AL/usdmaya/fileio/translators/: TranslatorBase.cpp  TranslatorBase.h  TranslatorContext.cpp  wrapTranslatorBase.cpp
plugin/al/lib/AL_USDMaya/AL/usdmaya/nodes/: Engine.cpp  LayerManager.cpp  LayerManager.h  ProxyDrawOverride.cpp  ProxyShape.cpp  ProxyShape.h  ProxyShapeSelection.cpp  Transform.cpp  TransformationMatrix.cpp
plugin/al/lib/AL_USDMaya/AL/usdmaya/nodes/proxy/: LockManager.cpp  PrimFilter.cpp  ProxyShapeMetaData.cpp  ProxyShapeVariantFallbacks.cpp
plugin/al/plugin/AL_USDMayaPlugin/: CMakeLists.txt
plugin/al/plugin/AL_USDMayaTestPlugin/: CMakeLists.txt
plugin/al/plugin/AL_USDMayaTestPlugin/AL/usdmaya/commands/: test_ProxyShapeSelect.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/AL/usdmaya/fileio/: import_playback_range.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/AL/usdmaya/nodes/: test_LayerManager.cpp  test_ProxyShape.cpp  test_Transform.cpp  test_TransformMatrix.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/py/: CMakeLists.txt  testLayerManager.py  testProxyShape.py  testTranslators.py
plugin/al/plugin/AL_USDMayaTestPlugin/test_data/: translate_meal.usda
plugin/al/schemas/AL/usd/schemas/maya/tests/: CMakeLists.txt
plugin/al/translators/: Camera.cpp  MayaReference.cpp  Mesh.cpp  NurbsCurve.cpp
plugin/al/translators/tests/: CMakeLists.txt
plugin/al/usdmayautils/AL/usdmaya/utils/: AnimationTranslator.cpp  MeshUtils.cpp  NurbsCurveUtils.h  Utils.cpp  Utils.h
plugin/al/usdtransaction/AL/usd/transaction/: TransactionManager.cpp
test/lib/usd/utils/: CMakeLists.txt  test_MayaTransformAPI.cpp  test_TransformCache.cpp  test_TransformEvaluator.cpp  test_TransformManipulator.cpp  test_TransformManipulatorEx.cpp  test_TransformOpTools.cpp
